@@ -2,6 +2,7 @@ Please view this file on the master branch, on stable branches it's out of date.
 
 v 8.11.8
   - Respect the fork_project permission when forking projects
+  - Set a restrictive CORS policy on the API for credentialed requests
 
 v 8.11.7
   - Avoid conflict with admin labels when importing GitHub labels. !6158
